modified colors of menu

--- a/content/project/gdcr-2016.md
+++ b/content/project/gdcr-2016.md
@@ -1,5 +1,6 @@
 +++
 title = "Global Day of Coderetreat 2016 // Main organizer"
+description = "The biggest event for developers organized by the international Software Craftsmanship Community. I organized the very first one in South France in 2016."
 date = "2017-01-06T12:53:04+01:00"
 
 +++
